removed the profile

--- a/spring_user_client.yml
+++ b/spring_user_client.yml
@@ -7,8 +7,8 @@ spring:
       ddl-auto: update
     show-sql: true
 
-  profiles:
-    active: dev  # ✅ Set active profile
+#  profiles:
+ #   active: dev  # ✅ Set active profile
 
 sonar:
   host: http://localhost:9000  # ✅ SonarQube URL
