--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -31,3 +31,13 @@ config:
   external:
     path: "E:/config_external/"  
     file: "my-custom-config"
+logging:
+  level:
+    root: INFO
+    com.external.demo: DEBUG
+   
+    
+
+    
+    
+    
