--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -20,7 +20,7 @@ spring:
 logging:
   level:
     root: INFO
-    com.external.demo: DEBUG
+    com.external.demo: INFO
     org.springframework.jdbc.core: DEBUG  # Logs SQL execution details
     org.hibernate.SQL: DEBUG  # Logs Hibernate-generated SQL queries
     org.hibernate.type.descriptor.sql: TRACE  # Logs SQL parameters
