--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -17,13 +17,13 @@ spring:
         format_sql: true  # Pretty prints SQL queries
         use_sql_comments: true  # Adds comments to queries for better debugging
 
-logging:
-  level:
-    root: INFO
+#logging:
+#  level:
+#    root: INFO
    # com.external.demo: INFO
-    org.springframework.jdbc.core: DEBUG  # Logs SQL execution details
-    org.hibernate.SQL: DEBUG  # Logs Hibernate-generated SQL queries
-    org.hibernate.type.descriptor.sql: TRACE  # Logs SQL parameters
+ #   org.springframework.jdbc.core: DEBUG  # Logs SQL execution details
+ #   org.hibernate.SQL: DEBUG  # Logs Hibernate-generated SQL queries
+ #   org.hibernate.type.descriptor.sql: TRACE  # Logs SQL parameters
 
 app:
   name: "Externalized Config - Dev 3423456"
