--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -11,7 +11,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
-#    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true  # Pretty prints SQL queries
