--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -14,7 +14,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        format_sql: true  # Pretty prints SQL queries
+        format_sql: false  # Pretty prints SQL queries
         use_sql_comments: true  # Adds comments to queries for better debugging
 
 #logging:
