--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
+    username: postgrestest
     password: test@1990
     driver-class-name: org.postgresql.Driver
   jpa:
