--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -6,6 +6,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgrestest
     password: test@1990
+    hikari:
+      minimum-idle: 0
+      maximum-pool-size: 5
+      connection-test-query: SELECT 1
+      validation-timeout: 1000
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
