--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: Bhagya@1990
+    password: Bhayy@1990
     hikari:
       minimum-idle: 0
       maximum-pool-size: 5
