--- a/my-custom-config-dev.yml
+++ b/my-custom-config-dev.yml
@@ -37,5 +37,5 @@ app:
 
 config:
   external:
-    path: "E:/config_external/demo"  
+    path: "E:/config_external/demo_01"  
     file: "my-custom-config"
